2015-01-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix state file update.

2015-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: DParse new AWS4 STORAGE-API.
	* device-src/s3-util.c (s3_compute_sha256_hash_ba,
	  s3_compute_sha256_hash, EncodeHMACSHA256, s3_tohex): New function.
	* device-src/s3-util.h (s3_compute_sha256_hash_ba,
	  s3_compute_sha256_hash, EncodeHMACSHA256, s3_tohex): New prototypes.
	* device-src/s3.c: Compute signature for AWS4.
	* device-src/s3.h (S3_api): Add S3_API_UNKNOWN and S3_API_AWS4.
	* man/xml-source/amanda-devices.7.xml (STORAGE_API): Document AWS4.
	* server-src/amtape.pl: Fix perl warning.

2015-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix retry handling.

2015-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: (print_platform): Do not execute
	  /usr/bin/sw_vers if it doesn't exists.
	* common-src/amutil.c: Fix debugging statement.

2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Runs.pl, installcheck/amreport.pl,
	  perl/Amanda/Amdump.pm, perl/Amanda/Amflush.pm,
	  perl/Amanda/CheckDump.pm, perl/Amanda/DB/Catalog.pm,
	  perl/Amanda/FetchDump.pm, perl/Amanda/Logfile.swg,
	  perl/Amanda/Process.pm, perl/Amanda/Rest/Report.pm,
	  perl/Amanda/Rest/Runs.pm, perl/Amanda/Status.pm,
	  perl/Amanda/Vault.pm, server-src/amstatus.pl,
	  server-src/driver.c: CNF_LOGIDR can be relative.

2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c (print_platform): Detect BSD variant.

2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Remove useless line.

2015-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* config/compile, config/config.guess,
	  config/config.sub, config/missing,
	  config/test-driver: Upgrade to automake 1.14.1

2015-01-26  Jean-Louis Martineau <martineau@zmanda.com>